Team name added

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 	<body>
 	<div id="randomname">
 		<div class="mainDetails">
-			<h5>Group Name</h5>
+			<h5>Phronesis Collective</h5>
 		</div>
 		<div class="clear"></div>
 		<div class="mainDetails">
-		<p>Description.............................................</p>
+		<p>Team introduction.............................................</p>
 		<p>........................</p>
 		<p>.......................</p>
 		<p>.......................................</p>
