Peta's bio and profile link, changed button position slightly Changed color scheme

--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
 		<p>.......................</p>
 		<p>.......................................</p>
 		</div>
+		<div class="clear"></div>
 		
 		<div id="mainContent">
 			<section>
 				<article>
 					<div class="mainHeaders">
-						<img src="headshot.jpg" alt="Team Member"/>
+						<img src="mask.jpg" alt="Team Leader"/>
 						<center>
 						 <table align="center" cellspacing="0" cellpadding="0" width="100%">
 						   <tr>
@@ -28,11 +29,9 @@
 							   <table border="0" class="mobile-button" cellspacing="0" cellpadding="0">
 								 <tr>
 								   <td align="center" bgcolor="#2b3138" style="background-color: #2b3138; margin: auto; max-width: 600px; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; padding: 15px 20px; " width="100%">
-								   <!--[if mso]>&nbsp;<![endif]-->
-									   <a href="add link" target="_blank" style="19px; font-family: Arial Black, Arial, sans-serif; color: #ffffff; font-weight:normal; text-align:center; background-color: #2b3138; text-decoration: none; border: none; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; display: inline-block;">
-										   <span style="font-size: 19px; font-family: Arial Black, Arial, sans-serif; color: #ffffff; font-weight:normal; line-height:1.5em; text-align:center;">Profile</span>
+									   <a href="https://peta1985.github.io/Assessment-1/index.html" target="_blank" style="19px; font-family: Arial Black, Arial, sans-serif; color: #F5FBEF; font-weight:normal; text-align:center; background-color: #2b3138; text-decoration: none; border: none; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; display: inline-block;">
+										   <span style="font-size: 19px; font-family: Arial Black, Arial, sans-serif; color: #F5FBEF; font-weight:normal; line-height:1.5em; text-align:center;">Profile</span>
 									 </a>
-								   <!--[if mso]>&nbsp;<![endif]-->
 								   </td>
 								 </tr>
 							   </table>
@@ -44,7 +43,9 @@
 					
 					<div class="mainContents">
 						<h2>Peta-Maree Bubear     (Team Leader)</h2>
-						<p>Short intro</p>
+						<p>I am a mother of two sons, four stepdaughters, two dogs and two rats. I have a keen interest in dinosaurs and have served in the RAAF for 15 years.</p>
+						<p>I have no basic skills or background knowledge in IT or computers. However, I am especially keen to learn and would be incredibly excited to complete a Bachelor of IT.</p>
+						<p>My interest in IT has culminated from years of avoidance and a renewed requirement to be ahead of my peers in the IT field if I am to succeed in my industry.  </p>
 					</div>
 				</article>
 				<div class="clear"></div>
@@ -62,11 +63,9 @@
 							   <table border="0" class="mobile-button" cellspacing="0" cellpadding="0">
 								 <tr>
 								   <td align="center" bgcolor="#2b3138" style="background-color: #2b3138; margin: auto; max-width: 600px; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; padding: 15px 20px; " width="100%">
-								   <!--[if mso]>&nbsp;<![endif]-->
-									   <a href="add link" target="_blank" style="19px; font-family: Arial Black, Arial, sans-serif; color: #ffffff; font-weight:normal; text-align:center; background-color: #2b3138; text-decoration: none; border: none; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; display: inline-block;">
-										   <span style="font-size: 19px; font-family: Arial Black, Arial, sans-serif; color: #ffffff; font-weight:normal; line-height:1.5em; text-align:center;">Profile</span>
+									   <a href="add link" target="_blank" style="19px; font-family: Arial Black, Arial, sans-serif; color: #F5FBEF; font-weight:normal; text-align:center; background-color: #2b3138; text-decoration: none; border: none; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; display: inline-block;">
+										   <span style="font-size: 19px; font-family: Arial Black, Arial, sans-serif; color: #F5FBEF; font-weight:normal; line-height:1.5em; text-align:center;">Profile</span>
 									 </a>
-								   <!--[if mso]>&nbsp;<![endif]-->
 								   </td>
 								 </tr>
 							   </table>
@@ -96,11 +95,9 @@
 							   <table border="0" class="mobile-button" cellspacing="0" cellpadding="0">
 								 <tr>
 								   <td align="center" bgcolor="#2b3138" style="background-color: #2b3138; margin: auto; max-width: 600px; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; padding: 15px 20px; " width="100%">
-								   <!--[if mso]>&nbsp;<![endif]-->
-									   <a href="add link" target="_blank" style="19px; font-family: Arial Black, Arial, sans-serif; color: #ffffff; font-weight:normal; text-align:center; background-color: #2b3138; text-decoration: none; border: none; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; display: inline-block;">
-										   <span style="font-size: 19px; font-family: Arial Black, Arial, sans-serif; color: #ffffff; font-weight:normal; line-height:1.5em; text-align:center;">Profile</span>
+									   <a href="add link" target="_blank" style="19px; font-family: Arial Black, Arial, sans-serif; color: #F5FBEF; font-weight:normal; text-align:center; background-color: #2b3138; text-decoration: none; border: none; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; display: inline-block;">
+										   <span style="font-size: 19px; font-family: Arial Black, Arial, sans-serif; color: #F5FBEF; font-weight:normal; line-height:1.5em; text-align:center;">Profile</span>
 									 </a>
-								   <!--[if mso]>&nbsp;<![endif]-->
 								   </td>
 								 </tr>
 							   </table>
@@ -130,11 +127,9 @@
 							   <table border="0" class="mobile-button" cellspacing="0" cellpadding="0">
 								 <tr>
 								   <td align="center" bgcolor="#2b3138" style="background-color: #2b3138; margin: auto; max-width: 600px; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; padding: 15px 20px; " width="100%">
-								   <!--[if mso]>&nbsp;<![endif]-->
-									   <a href="add link" target="_blank" style="19px; font-family: Arial Black, Arial, sans-serif; color: #ffffff; font-weight:normal; text-align:center; background-color: #2b3138; text-decoration: none; border: none; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; display: inline-block;">
-										   <span style="font-size: 19px; font-family: Arial Black, Arial, sans-serif; color: #ffffff; font-weight:normal; line-height:1.5em; text-align:center;">Profile</span>
+									   <a href="add link" target="_blank" style="19px; font-family: Arial Black, Arial, sans-serif; color: #F5FBEF; font-weight:normal; text-align:center; background-color: #2b3138; text-decoration: none; border: none; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; display: inline-block;">
+										   <span style="font-size: 19px; font-family: Arial Black, Arial, sans-serif; color: #F5FBEF; font-weight:normal; line-height:1.5em; text-align:center;">Profile</span>
 									 </a>
-								   <!--[if mso]>&nbsp;<![endif]-->
 								   </td>
 								 </tr>
 							   </table>
@@ -164,11 +159,9 @@
 							   <table border="0" class="mobile-button" cellspacing="0" cellpadding="0">
 								 <tr>
 								   <td align="center" bgcolor="#2b3138" style="background-color: #2b3138; margin: auto; max-width: 600px; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; padding: 15px 20px; " width="100%">
-								   <!--[if mso]>&nbsp;<![endif]-->
-									   <a href="add link" target="_blank" style="19px; font-family: Arial Black, Arial, sans-serif; color: #ffffff; font-weight:normal; text-align:center; background-color: #2b3138; text-decoration: none; border: none; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; display: inline-block;">
-										   <span style="font-size: 19px; font-family: Arial Black, Arial, sans-serif; color: #ffffff; font-weight:normal; line-height:1.5em; text-align:center;">Profile</span>
+									   <a href="add link" target="_blank" style="19px; font-family: Arial Black, Arial, sans-serif; color: #F5FBEF; font-weight:normal; text-align:center; background-color: #2b3138; text-decoration: none; border: none; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; display: inline-block;">
+										   <span style="font-size: 19px; font-family: Arial Black, Arial, sans-serif; color: #F5FBEF; font-weight:normal; line-height:1.5em; text-align:center;">Profile</span>
 									 </a>
-								   <!--[if mso]>&nbsp;<![endif]-->
 								   </td>
 								 </tr>
 							   </table>
