--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 					</div>
 					
 					<div class="mainContents">
-					<h2>MR Ben Tanner</h3>
+					<h2>Ben Tanner</h3>
 					<h4>Phronesis Collective Researcher and Developer</h4>
 					<h4>Town State, Indigenous Country</h4>
 						<p>Ben's career for the last 15yrs has been in cooking and am a qualified chef.</p>
