--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 						<p>David have been into gaming and various tech since he was about 8 when his father bought a Nintendo Entertainment System home.
 						At various points of his childhood, he would disassemble various items, (Radios and pcs etc) and learn how they work before reassembling them.</p>
 						<p>David left school after year 10 because he was bored. David took up cabinetmaking and moved towards some hands-on work.
-						He started learning some LUA through and forum and started making some basic add-ons for a game.</p>
+						He started learning some LUA through a forum and started making some basic add-ons for a game.</p>
 						<p>David's grandmother was an artist. Although David did not consider himself one until he started his hand at software development.
 						This was his artform.
 						David is looking to advance his knowledge and skills in this area.</p>
