--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
 </head>
 	<body>
 	<div id="randomname">
-		<div class="mainDetails">
-			<h5>Phronesis Collective</h5>
-		</div>
+		<center>
+		<h5>Phronesis Collective</h5>
 		<div class="clear"></div>
-		<div class="mainDetails">
-		<p>Phronesis Collective embodies practical wisdom and mindfulness.</p>
+		<div class="subheader">
+		<p>Phronesis Collective embodies practical wisdom and mindfulness.</p>
 		<p>As a small, diverse team, we are able and willing to produce relevant work in line with stakeholder needs.</p>
 		<p>We are agile, resilient, and adaptable. We are eager to learn and well prepared.</p>
+		</div></center>
+		<div class="clear"></div>
+		<div class="mainheader">
 		</div>
 		<div class="clear"></div>
 		
@@ -45,7 +47,7 @@
 						<h4>Phronesis Collective Team Leader</h4>
 						<h4>Canberra ACT, Ngunnawal Country</h4>
 							<p>Peta is a mother of two sons, four stepdaughters, two dogs and two rats, with a keen interest in dinosaurs and megafauna. </p>
-							<p>Peta has served in the Royal Australian Air Force for 15 years and is developing her underpinning knowledge and skills in IT and computing. Her interest in IT has culminated after years of hesitance and a renewed sense of appreciation. </p>
+							<p>Peta has served in the Royal Australian Air Force for 15 years and is developing her underpinning knowledge and skills in IT and computing. Her interest in IT has culminated after years of hesitance and a renewed sense of appreciation. </p>
 							<p>Peta's employer is investigating how to best utilise artificial intelligence and machine learning in cyber security and the field of space. </p>
 							<p>Peta has commenced a Bachelor of IT through RMIT to stay ahead of her peers and remain relevant in the warfighting domain.  </p>
 					</div>
@@ -65,7 +67,7 @@
 							   <table border="0" class="mobile-button" cellspacing="0" cellpadding="0">
 								 <tr>
 								   <td align="center" bgcolor="#2b3138" style="background-color: #2b3138; margin: auto; max-width: 600px; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; padding: 15px 20px; " width="100%">
-									   <a href="add link" target="_blank" style="19px; font-family: Arial Black, Arial, sans-serif; color: #F5FBEF; font-weight:normal; text-align:center; background-color: #2b3138; text-decoration: none; border: none; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; display: inline-block;">
+									   <a href="https://drschung.github.io/RMIT-Intro-IT-SP4-Assign1/ " target="_blank" style="19px; font-family: Arial Black, Arial, sans-serif; color: #F5FBEF; font-weight:normal; text-align:center; background-color: #2b3138; text-decoration: none; border: none; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; display: inline-block;">
 										   <span style="font-size: 19px; font-family: Arial Black, Arial, sans-serif; color: #F5FBEF; font-weight:normal; line-height:1.5em; text-align:center;">Profile</span>
 									 </a>
 								   </td>
@@ -177,7 +179,7 @@
 							   <table border="0" class="mobile-button" cellspacing="0" cellpadding="0">
 								 <tr>
 								   <td align="center" bgcolor="#2b3138" style="background-color: #2b3138; margin: auto; max-width: 600px; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; padding: 15px 20px; " width="100%">
-									   <a href="https://drschung.github.io/RMIT-Intro-IT-SP4-Assign1/" target="_blank" style="19px; font-family: Arial Black, Arial, sans-serif; color: #F5FBEF; font-weight:normal; text-align:center; background-color: #2b3138; text-decoration: none; border: none; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; display: inline-block;">
+									   <a href="Add Link" target="_blank" style="19px; font-family: Arial Black, Arial, sans-serif; color: #F5FBEF; font-weight:normal; text-align:center; background-color: #2b3138; text-decoration: none; border: none; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; display: inline-block;">
 										   <span style="font-size: 19px; font-family: Arial Black, Arial, sans-serif; color: #F5FBEF; font-weight:normal; line-height:1.5em; text-align:center;">Profile</span>
 									 </a>
 								   </td>
