--- a/interview.html
+++ b/interview.html
@@ -36,7 +36,7 @@
 					</center>
 					<ul>
 					<li> <a href="index.html">Team Profile</a></li>
-					<li> <a href="interview.html">Interview</a></li>
+					<li> <a href="tech-reports.html">Technology Reports</a></li>
 					</ul>
 				</article>
 			</section>
