--- a/interview.html
+++ b/interview.html
@@ -9,9 +9,6 @@
 		<h5>Phronesis Collective</h5>
 		<div class="clear"></div>
 		<div class="subheader">
-		<p>Phronesis Collective embodies practical wisdom and mindfulness.</p>
-		<p>As a small, diverse team, we are able and willing to produce relevant work in line with stakeholder needs.</p>
-		<p>We are agile, resilient, and adaptable. We are eager to learn and well prepared.</p>
 		</div></center>
 		<div class="clear"></div>
 		<div class="mainheader">
@@ -19,7 +16,7 @@
 		<div class="clear"></div>
 		
 		<center>
-		<h2>Blockchain Technology</h3>
+		<h2>Interview</h3>
 		</center>
 		<div id="mainContent">
 			<section>
