--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 					<div class="mainContentsRight">
 						<h2>Dr Stephen Chung</h3>
 						<h4>Phronesis Collective Researcher and Developer</h4>
-						<h4>Town State, Indigenous Country </h4>
+						<h4>Sydney NSW, The Gadigal of the Eora Nation </h4>
 							<p>Stephen is a practicing medical specialist and has been a senior consultant physician in rehabilitation medicine for over 15 years. He graduated with a Masters in Health Admin at UNSW, and further studied pain medicine and management with assistive equipment and technology for patients with impairments and disabilities. He is also a licensed real estate agent and an auctioneer.</p>
 							<p>Stephen enjoys sports such as squash, table tennis, badminton, and snow skiing. He speaks fluent Cantonese, and his latest hobby is his veggie patch. Stephen’s curiosity in IT stemmed from early interest in personal computing and computer language BASIC. When he got a Hotmail email address in the 90s he wondered how the ‘www’ would change the future. </p>
 							<p>In his rehabilitation medical practice, Stephen is exposed to pioneering healthcare technology. He has researched the use of interactive computer assistive technology such as Nintendo VVii and XBOX for patient therapy and is changing to Makey Makey with an adapted user interface to suit patient abilities. Stephen is looking forward to further exploring user interface enhancements in the IT industry for patient cohort.  </p>
